Slightly tweak clock numbers to avoid covering up colon

--- a/css/flipclock.css
+++ b/css/flipclock.css
@@ -85,9 +85,9 @@
   position: absolute;
   left: 0;
   top: 0;
-  width: 130%;
-  height: 130%;
-  line-height: 120px;
+  width: 110%;
+  height: 120%;
+  line-height: 113px;
   text-decoration: none !important;
 }
 
